<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".task_page">

    <Button
        android:id="@+id/button3"
        android:layout_width="@dimen/_155sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:text="@string/missed"
        android:paddingLeft="0dp"
        android:textSize="@dimen/_15sdp"
        android:paddingRight="0dp"
        app:cornerRadius="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="@dimen/_155sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="1dp"
        android:paddingLeft="0dp"
        android:layout_marginTop="1dp"
        android:textSize="@dimen/_15sdp"
        android:text="@string/completed"

        app:cornerRadius="0dp"
        app:iconPadding="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginBottom="600dp"
        android:text="@string/task"
        android:textSize="@dimen/_20sdp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="@dimen/_260sdp"
        android:layout_height="@dimen/_30sdp"
        android:text="@string/text1"
        android:textColor="#201B1B"
        android:textSize="@dimen/_20sdp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        app:layout_constraintVertical_bias="0.098" />
</androidx.constraintlayout.widget.ConstraintLayout>